src/test/deca/context/valid/if_then_else.deca
// Description:
//    Programme testant IfThenElse.
//
// Resultats:
//    
//
// Historique:
//    cree le 17/01/2022
{
if (false){
1+1;
}
else {
2+2;
}
}