src/test/deca/context/invalid/if_int.deca
// Description:
//    println non valid
//
// Resultats:
//    Ligne 12: must have an boolean
//
// Historique:
//    cree le 01/01/2022


{
    if(42){
        print("it must be right but unfortunately it isn't");
    }
}